Version 1.4.5:

* Fix bug in popup parallel coloured-diff mode where the anchor names
  weren't being generated properly, resulting in some browsers not
  centering their view in the correct place.

* Fixed bug in pop parallel coloured-diff mode where changes right at
  the end of the file weren't rendered.

* Support for parsing files generated with diff -b.

Version 1.4.4:

* Made the CVS file data retrieve command expanded within an eval for
  flexibility.  Included example using the curl command in
  codestriker.conf.

* Can now view coloured diff mode either in monospace font (requires
  more real-estate) or in variable-width font (harder to read code).
  The choice can be made dynamically. [Note the monospaced diff mode
  can be set for $default_topic_create_mode in codestriker.conf]

* Added a <BASE> tag which reduces the HTML size.  Also used cookies
  more intelligently so that the dreaded edit topic and other URLs
  were cut down to size, which also helped reducing the output.

* Took the gzip compression code from CVSweb and plonked it in.  Works
  nicely with Mozilla/Netscape/Konqueror.  If the Compress::Zlib
  library is installed, that is used for compression, otherwise the
  "gzip" executable is used (although this isn't an option if you are
  running this script within mod_perl).  [Note there are two new
  options in codestriker.conf - $use_compression and $gzip]

* Codestriker now works under mod_perl successfully.  Updated
  installation instructions for use under mod_perl.

Version 1.4.3:

* New popup viewing mode "parallel".  In addition to being able to
  bring up a new window containing the contents of a file in its
  original or new form, you can also set the popup display to be a
  coloured diff, containing the contents of the original and the new
  file side by side (similar to the main screen in coloured diff
  mode).  While this mode is more bandwidth intensive, this can also
  aid considerably in the reviewing process.
